k8s/backend/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chat-app
spec: 
  replicas: 1
  selector:
    matchLabels:
      apps: backend
  template:
    metadata:
      labels:
        apps: backend
    spec:
      containers:
        - name: backend
          image: arpanel/chat-app-backend:v11
          ports: 
            - containerPort: 5001
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
